compiler/tests/ar/errors/toplevel_import_not_first.salam
// لغة: العربية
// توقع: E083
const N := 1

import "std/io"

func main: end
